# formfiller-agent

./: .env.example  .gitignore  README.md  config.prod.example.yaml  config.yaml  install.ps1  profile.yaml  pyproject.toml  run-batch.cmd  update.ps1
docs/: deploiement-collegue.md
docs/superpowers/eval/: agent-fill-eval.md
docs/superpowers/plans/: 2026-06-10-form-fill-automation.md  2026-06-15-agentic-fill-stage.md  2026-06-25-semantic-two-pass-mapping.md  2026-07-01-inbox-subfolder.md  2026-07-01-verifier-model-config.md  2026-07-07-batch-triage.md  2026-07-07-deployment-colleague-workstation.md
docs/superpowers/specs/: 2026-06-10-form-fill-automation-design.md  (+7 more)
src/formfiller/: __init__.py  batch.py  batch_state.py  choices.py  cli.py  confidence.py  config.py  decision_log.py  email_source.py  field_mapper.py  form_filler.py  form_reader.py  link_extractor.py  models.py  orchestrator.py  result_logger.py  review_queue.py  triage.py
tests/: conftest.py  test_batch.py  test_batch_state.py  test_cli.py  test_cli_agent.py  test_confidence.py  test_config.py  test_decision_log.py  test_email_source.py  test_field_mapper.py  test_form_filler.py  test_form_reader.py  test_link_extractor.py  test_models.py  test_orchestrator.py  test_profile_descriptions.py  test_result_logger.py  test_review_queue.py  test_triage.py
tests/agent/: conftest.py  test_blockers.py  test_llm.py  test_loop.py  test_models.py  test_perception.py  test_pipeline.py  test_submit_guard.py  test_tools.py  test_trace.py
tests/fixtures/: google_form.html  ms_form.html  ms_forms_rendered.html
(+9 files in other folders)
