[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "formfiller"
version = "0.1.0"
description = "Email-to-form automation POC"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "PyYAML>=6.0",
    "openai>=1.51",
    "openpyxl>=3.1",
    "playwright>=1.42",
    "pywin32>=306; sys_platform == 'win32'",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
formfiller = "formfiller.cli:main"
formfiller-batch = "formfiller.batch:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
